# notebook

./: .env.example  .gitignore  ARCHITECTURE.md  CLINE.md  README.md  pyproject.toml
src/personal_bot/: __init__.py  __main__.py  bootstrap.py  config.py
src/personal_bot/access/: __init__.py  access_request_notification_sender.py  contact_message_handler.py  service.py  start_command_handler.py
src/personal_bot/access/callback_handlers/: __init__.py  access_request_callback_handler.py
src/personal_bot/core/: __init__.py  enums.py
src/personal_bot/core/entities/: access_request.py  user.py
src/personal_bot/db/: database.py  schema.py
src/personal_bot/db/repositories/: __init__.py  access_request_repository.py  settings_repository.py  user_repository.py
src/personal_bot/telegram/: __init__.py  application.py
src/personal_bot/telegram/menus/: __init__.py  access_request_review_menu.py  main_menu.py
tests/: test_access_request_notification_sender.py  test_access_request_review.py  test_access_service.py  test_contact_validation.py  test_database_schema.py  test_database_transaction.py
